Added 'Tailwind' and 'classnames' packages and used them to implement the responsive styling for this app. Careful consideration was given to 375px and 1280px responsiveness.

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -38,7 +38,15 @@
 }
 
 .leaflet-container {
-  width: 50vh;
-  height: 50vh;
+  width: 22rem;
+  height: 22rem;
   z-index: 1;
+}
+
+@media (max-width: 600px) {
+  .leaflet-container {
+    width: 18rem;
+    height: 18rem;
+    z-index: 1;
+  }
 }
